# cargo-set-registry

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
src/: cli.rs  errors.rs  main.rs  set_registry.rs
