[package]
name = "cargo-set-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cargo-edit = "0.12"
cargo_metadata = "0.15.4"
dunce = "1.0"
anyhow = "1.0"
toml = "0.7.4"
toml_edit = "0.19.9"
indexmap = "1"

[dependencies.clap]
version = "4.3.0"
features = ["derive", "wrap_help"]

[dependencies.semver]
features = ["serde"]
version = "1.0.17"
